@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: Some kijk.nl shows were missing (Fixes #794)
+Fixed: Kijk.nl updated to the new BrightCove API (Fixes #799)
 
 [I]Previous changes[/I]
+Fixed: Some kijk.nl shows were missing (Fixes #794)
 Fixed: Missing thumbs on the site cause missing items (Fixes #791)
 Fixed: Not all kijk.nl shows were displayed
 Fixed: Kijk.nl removed their descriptions, which broke the channels (Fixes #737)
